# github-actions-test

./: CMakeLists.txt  README.md
.github/workflows/: automatic-release.yaml  cmake-build-test.yml  packages.yaml
app/: main.cpp
cmake/: packaging.cmake
include/greeter/: greeter.hpp
scripts/: increment_version.sh
src/: config.inc  greeter.cpp
test/libgreeter/: test.cpp
